--- a/mb3syllables.html
+++ b/mb3syllables.html
@@ -7,11 +7,12 @@
   <script src="./plugins/jspsych-audio-keyboard-response.js"></script>
   <script src="./plugins/jspsych-survey-text.js"></script>
   <script src="./plugins/jspsych-survey-multi-select.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./plugins/jquery.min.js"></script>
   <link href="./css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
 <body></body>
 <script>
+//   Original jquery got on May 31, 2019 from "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
 
 var currsyl = ""
 var subjid = "SS"
@@ -25,20 +26,20 @@ var audio = [
 'snd/ka.wav',
 'snd/ke.wav',
 'snd/ku.wav',
+'snd/la.wav',
 'snd/li.wav',
 'snd/lo.wav',
 'snd/ma.wav',
-'snd/me.wav',
-'snd/mu.wav',
-'snd/na.wav',
+'snd/me2_0.wav',
+'snd/mu1_0.wav',
 'snd/ni.wav',
 'snd/no.wav',
-'snd/pa.wav',
-'snd/pe.wav',
-'snd/pu.wav',
-'snd/si.wav',
-'snd/so.wav',
-'snd/ta.wav',
+'snd/pa2_0.wav',
+'snd/pe2_1.wav',
+'snd/pu3_1.wav',
+'snd/si1_0.wav',
+'snd/so2_0.wav',
+'snd/ta2_1.wav',
 'snd/ti.wav',
 'snd/to.wav'
 ];
@@ -46,27 +47,27 @@ var audio = [
 
 var syllable_list = [
   {snd01: 'snd/fa.wav'},
-  {snd01: 'snd/fe.wav'},
-  {snd01: 'snd/fu.wav'},
-  {snd01: 'snd/ka.wav'},
-  {snd01: 'snd/ke.wav'},
-  {snd01: 'snd/ku.wav'},
-  {snd01: 'snd/li.wav'},
-  {snd01: 'snd/lo.wav'},
-  {snd01: 'snd/ma.wav'},
-  {snd01: 'snd/me.wav'},
-  {snd01: 'snd/mu.wav'},
-  {snd01: 'snd/na.wav'},
-  {snd01: 'snd/ni.wav'},
-  {snd01: 'snd/no.wav'},
-  {snd01: 'snd/pa.wav'},
-  {snd01: 'snd/pe.wav'},
-  {snd01: 'snd/pu.wav'},
-  {snd01: 'snd/si.wav'},
-  {snd01: 'snd/so.wav'},
-  {snd01: 'snd/ta.wav'},
-  {snd01: 'snd/ti.wav'},
-  {snd01: 'snd/to.wav'}
+{snd01: 'snd/fe.wav'},
+{snd01: 'snd/fu.wav'},
+{snd01: 'snd/ka.wav'},
+{snd01: 'snd/ke.wav'},
+{snd01: 'snd/ku.wav'},
+{snd01: 'snd/la.wav'},
+{snd01: 'snd/li.wav'},
+{snd01: 'snd/lo.wav'},
+{snd01: 'snd/ma.wav'},
+{snd01: 'snd/me2_0.wav'},
+{snd01: 'snd/mu1_0.wav'},
+{snd01: 'snd/ni.wav'},
+{snd01: 'snd/no.wav'},
+{snd01: 'snd/pa2_0.wav'},
+{snd01: 'snd/pe2_1.wav'},
+{snd01: 'snd/pu3_1.wav'},
+{snd01: 'snd/si1_0.wav'},
+{snd01: 'snd/so2_0.wav'},
+{snd01: 'snd/ta2_1.wav'},
+{snd01: 'snd/ti.wav'},
+{snd01: 'snd/to.wav'}
 ];
 var totaltrials = syllable_list.length+4;
 var mytrialctr = 4;
@@ -116,7 +117,7 @@ timeline.push(getpersonaldetails);
 
 var instructions = {
   type: "html-keyboard-response",
-  stimulus: "<p><strong>Help rate the audio stimuli!</strong></p><p><i>Make sure you can hear audio!</i></p><p>In each trial you will hear one syllable.</p><p>After you have heard the syllable, please indicate the <strong>identity</strong> of the perceived syllable,i.e., which syllable you think you heard,</p><p>You will then hear the syllable again once.</p><p>Now please indicate how <strong>prototypical</strong> is the syllable of the pereived identity on a scale from 1 to 7</p><p></p><p><mark>Press any key to begin.</mark></p>",
+  stimulus: "<p><strong>Help rate the audio stimuli!</strong></p><p><i>Make sure you can hear audio!</i></p><p>In each trial you will hear one syllable.</p><p>After you have heard the syllable, please indicate the <strong>identity</strong> of the perceived syllable,i.e., which syllable you think you heard,</p><p>You will then hear the syllable again once.</p><p>Then, please indicate how <strong>prototypical</strong> is the syllable of the pereived identity on a scale from 1 to 7</p><p></p><p><mark>Press any key to begin.</mark></p>",
   on_finish: function() {
     jsPsych.setProgressBar(3/totaltrials);
   }
