--- a/mb3syllables.html
+++ b/mb3syllables.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <title>Rate syllables</title>
-  <script src="jspsych.js"></script>
+  <script src="plugins/jspsych.js"></script>
   <script src="./plugins/jspsych-html-keyboard-response.js"></script>
   <script src="./plugins/jspsych-audio-keyboard-response.js"></script>
   <script src="./plugins/jspsych-survey-text.js"></script>
   <script src="./plugins/jspsych-survey-multi-select.js"></script>
   <script src="./plugins/jquery.min.js"></script>
-  <script src="./plugins/mmturkey.js"></script>
+  <script src="plugins/mmturkey.js"></script>
 
   <script src="//uniqueturker.myleott.com/lib.js" type="text/javascript"></script>
   <script type="text/javascript">
