--- a/mb3syllables.html
+++ b/mb3syllables.html
@@ -2,15 +2,18 @@
 <html>
 <head>
   <title>Rate syllables</title>
+  <meta charset="utf-8">
   <script src="plugins/jspsych.js"></script>
   <script src="./plugins/jspsych-html-keyboard-response.js"></script>
   <script src="./plugins/jspsych-audio-keyboard-response.js"></script>
   <script src="./plugins/jspsych-survey-text.js"></script>
+  <script src="./plugins/jspsych-instructions.js"></script>
   <script src="./plugins/jspsych-survey-multi-select.js"></script>
   <script src="./plugins/jquery.min.js"></script>
-  <script src="plugins/mmturkey.js"></script>
+  <script src="./plugins/mmturkey.js"></script>
 
-  <script src="//uniqueturker.myleott.com/lib.js" type="text/javascript"></script>
+  <script src="http://uniqueturker.myleott.com/lib.js" type="text/javascript"></script>
+
   <script type="text/javascript">
   (function(){
     var ut_id = "87faf8ccd545c22d81fca3bfff4f3aa4";
@@ -20,7 +23,6 @@
     }
   })();
   </script>
-
 
   <link href="./css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
@@ -88,24 +90,39 @@ var mytrialctr = 4;
 
 var timeline = [];
 
+var instruct = {
+type: "instructions",
+pages: ["<div style='width: 46px; margin: 0 auto; text-align: center; background-color: #8C1516; padding: 10px 10px 10px 10px'>"+
+                "<img src='https://identity.stanford.edu/img/SU_New_BlockStree_WhiteRed_darkbgrd.png' height='46'  alt='Stanford University'></div>"+
+                "<center><p><strong>Stanford Language and Cognition Lab</strong></p></center>"+
+                "<p>In this experiment, you will hear short spoken syllables."+
+                "You will be asked to type what you heard, and then rate how good an example it was the syllable you heard. "+
+                "Click below to listen to an example of the kind of short syllables you will hear and check your audio:</p>"+
+                "<audio controls><source src='snd/yu_test.wav' type='audio/wav'> </audio>"+
+                "<p>You might hear a sylable that sounds like 'yu' or the English word 'you'. "+
+                "So for this example you might type out 'yu' or 'you'. Many or most syllables might not sound like English words at all, "+
+                "so just type whatever you hear. Then, you will be asked to judge the clarity of the sylable you heard, on a 1-7 scale. "+
+                "For this example, if you thought it was a very clear example of 'yu', you might choose to rate it a 6 or 7.</p> <p>The experiment takes about 7-9 minutes.</p>"+
+                "<p class='block-text' id='legal'>Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists in the Stanford Department of Psychology. If you have questions about this research, please contact George Kachergis at <a href='mailto://gkacherg@stanford.edu'>gkacherg@stanford.edu</a>. You must be at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>"],
+        show_clickable_nav: true,
+        show_page_number: true,
+        post_trial_gap: 2000
+    }
+
+// myTimeline.push(consent);
+timeline.push(instruct);
+
+
 var welcome = {
   type: "html-keyboard-response",
-  stimulus: "<p><strong>Manybabies3 Syllables. </strong></p><p>Press any key to begin.</p>"
+  stimulus: "<p>Press any key to begin the experiment.</p>",
+  on_finish: function(getsubjectcode) {
+    subjid = 'MT'+timenum;
+    return subjid;
+    jsPsych.setProgressBar(1/totaltrials)
+  }
 };
 timeline.push(welcome);
-
-var getsubjectcode = {
-  type: 'survey-text',
-  questions: [{prompt: "<p>Please enter a personal code: </p><p>(Any combination of letters/numbers)</p>"}],
-  on_finish: function(getsubjectcode) {
-    var numtrials = jsPsych.data.get().select('responses').count();
-    var resp = jsPsych.data.get().select('responses').values[numtrials-1];
-    subjid = JSON.parse(resp).Q0+timenum;
-    return subjid;
-    jsPsych.setProgressBar(1/totaltrials);
-  }
-}
-timeline.push(getsubjectcode);
 
 var language_options1 = ["English", "French", "Dutch", "Spanish", "Catalan", "Hungarian", "German", "Italian", "Portuguese", "Japanese", "Other"];
 var language_options2 = ["None", "English", "French", "Dutch", "Spanish", "Catalan", "Hungarian", "German", "Italian", "Portuguese", "Japanese", "Other"];
@@ -118,39 +135,16 @@ var language_select_block = {
 };
 timeline.push(language_select_block);
 
-/*
-var getpersonaldetails = {
-  type: 'survey-text',
-  questions: [{prompt: "What is your primary language?"},{prompt: "Any additional languages?"}],
-  on_finish: function() {
-    jsPsych.setProgressBar(2/totaltrials);
-  }
-}
-timeline.push(getpersonaldetails);
-*/
 
 var instructions = {
   type: "html-keyboard-response",
-  stimulus: "<p><strong>Help rate the audio stimuli!</strong></p><p><i>Make sure you can hear audio!</i></p><p>In each trial you will hear one syllable.</p><p>After you have heard the syllable, please indicate the <strong>identity</strong> of the perceived syllable,i.e., which syllable you think you heard,</p><p>You will then hear the syllable again once.</p><p>Then, please indicate how <strong>prototypical</strong> is the syllable of the pereived identity on a scale from 1 to 7</p><p></p><p><mark>Press any key to begin.</mark></p>",
+  stimulus: "<p>In each of the following trials, you will hear one syllable.</p><p>After you have heard the syllable, please indicate the <strong>identity</strong> of the perceived syllable,i.e., which syllable you think you heard,</p><p>You will then hear the syllable again once.</p><p>Then, please indicate how <strong>prototypical</strong> is the syllable of the pereived identity on a scale from 1 to 7</p><p></p><p><mark>Press any key to begin.</mark></p>",
   on_finish: function() {
     jsPsych.setProgressBar(3/totaltrials);
   }
 };
 timeline.push(instructions);
 
-/*
-var fixation = {
-  type: 'html-keyboard-response',
-  stimulus: '<div style="font-size:14px;">next syllable</div>',
-  choices: jsPsych.NO_KEYS,
-  trial_duration: 500,
-  post_trial_gap: 500,
-  on_start: function(){
-    dumtrialnum
-    jsPsych.setProgressBar((4+((jsPsych.data.get().count()+1)/5))/totaltrials);
-  }
-}
-*/
 
 var syllable_instructions = {
   type: "html-keyboard-response",
