--- a/mb3syllables.html
+++ b/mb3syllables.html
@@ -12,18 +12,6 @@
   <script src="./plugins/jquery.min.js"></script>
   <script src="./plugins/mmturkey.js"></script>
 
-  <script src="http://uniqueturker.myleott.com/lib.js" type="text/javascript"></script>
-
-  <script type="text/javascript">
-  (function(){
-    var ut_id = "87faf8ccd545c22d81fca3bfff4f3aa4";
-    if (UTWorkerLimitReached(ut_id)) {
-        document.getElementById('mturk_form').style.display = 'none';
-        document.getElementsByTagName('body')[0].innerHTML = "You have already completed the maximum number of HITs allowed by this requester. Please click 'Return HIT' to avoid any impact on your approval rating.";
-    }
-  })();
-  </script>
-
   <link href="./css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
 <body></body>
@@ -96,10 +84,10 @@ pages: ["<div style='width: 46px; margin: 0 auto; text-align: center; background
                 "<img src='https://identity.stanford.edu/img/SU_New_BlockStree_WhiteRed_darkbgrd.png' height='46'  alt='Stanford University'></div>"+
                 "<center><p><strong>Stanford Language and Cognition Lab</strong></p></center>"+
                 "<p>In this experiment, you will hear short spoken syllables."+
-                "You will be asked to type what you heard, and then rate how good an example it was the syllable you heard. "+
+                "You will be asked to type what you heard, and then rate how good an example it was of the syllable you heard. "+
                 "Click below to listen to an example of the kind of short syllables you will hear and check your audio:</p>"+
                 "<audio controls><source src='snd/yu_test.wav' type='audio/wav'> </audio>"+
-                "<p>You might hear a sylable that sounds like 'yu' or the English word 'you'. "+
+                "<p>You might hear a syllable that sounds like 'yu' or the English word 'you'. "+
                 "So for this example you might type out 'yu' or 'you'. Many or most syllables might not sound like English words at all, "+
                 "so just type whatever you hear. Then, you will be asked to judge the clarity of the sylable you heard, on a 1-7 scale. "+
                 "For this example, if you thought it was a very clear example of 'yu', you might choose to rate it a 6 or 7.</p> <p>The experiment takes about 7-9 minutes.</p>"+
@@ -116,10 +104,10 @@ timeline.push(instruct);
 var welcome = {
   type: "html-keyboard-response",
   stimulus: "<p>Press any key to begin the experiment.</p>",
-  on_finish: function(getsubjectcode) {
+  on_finish: function() {
     subjid = 'MT'+timenum;
+    jsPsych.setProgressBar(1/totaltrials);
     return subjid;
-    jsPsych.setProgressBar(1/totaltrials)
   }
 };
 timeline.push(welcome);
@@ -247,7 +235,7 @@ var outro = {
     jsPsych.setProgressBar(1);
     saveData(subjid, jsPsych.data.get().csv());
     setTimeout(function() {
-      turk.submit(jsPsych.data.get());
+      turk.submit(jsPsych.data.get().json());
     }, 5000);
   }
 };
