don't allow starting in preview

--- a/mb3syllables.html
+++ b/mb3syllables.html
@@ -6,17 +6,30 @@
   <script src="plugins/jspsych.js"></script>
   <script src="./plugins/jspsych-html-keyboard-response.js"></script>
   <script src="./plugins/jspsych-audio-keyboard-response.js"></script>
+  <script src="./plugins/jspsych-external-html.js"></script>
   <script src="./plugins/jspsych-survey-text.js"></script>
   <script src="./plugins/jspsych-instructions.js"></script>
   <script src="./plugins/jspsych-survey-multi-select.js"></script>
   <script src="./plugins/jquery.min.js"></script>
   <script src="./plugins/mmturkey.js"></script>
+  <script src="//uniqueturker.myleott.com/lib.js" type="text/javascript"></script>
+
+  <script type="text/javascript">
+  (function(){
+    var ut_id = "87faf8ccd545c22d81fca3bfff4f3aa4";
+    if (UTWorkerLimitReached(ut_id)) {
+        document.getElementById('mturk_form').style.display = 'none';
+        document.getElementsByTagName('body')[0].innerHTML = "You have already completed the maximum number of HITs allowed by this requester. Please click 'Return HIT' to avoid any impact on your approval rating.";
+    }
+  })();
+  </script>
 
   <link href="./css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
 <body></body>
 <script>
 //   Original jquery got on May 31, 2019 from "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+var turkInfo = jsPsych.turk.turkInfo();
 
 var currsyl = ""
 var subjid = "SS"
@@ -77,6 +90,24 @@ var totaltrials = syllable_list.length+4;
 var mytrialctr = 4;
 
 var timeline = [];
+
+var check_preview = function(elem) {
+  if(turkInfo.previewMode && !turkInfo.outsideTurk) {
+    return true;
+  } else {
+    alert("You must accept the HIT to begin the experiment.");
+    return false;
+  }
+};
+
+
+// declare the block.
+var trial = {
+  type:'external-html',
+  url: "ad.html",
+  cont_btn: "start",
+  check_fn: check_preview
+};
 
 var instruct = {
 type: "instructions",
