--- a/mb3syllables.html
+++ b/mb3syllables.html
@@ -101,13 +101,13 @@ var check_preview = function(elem) {
 };
 
 
-// declare the block.
-var trial = {
+var ad = {
   type:'external-html',
   url: "ad.html",
   cont_btn: "start",
   check_fn: check_preview
 };
+timeline.push(ad);
 
 var instruct = {
 type: "instructions",
