--- a/mb3syllables.html
+++ b/mb3syllables.html
@@ -105,7 +105,9 @@ var ad = {
   type:'external-html',
   url: "ad.html",
   cont_btn: "start",
-  check_fn: check_preview
+  check_fn: check_preview,
+  force_refresh = true,
+  execute_script = true
 };
 timeline.push(ad);
 
