--- a/mb3syllables.html
+++ b/mb3syllables.html
@@ -106,8 +106,8 @@ var ad = {
   url: "ad.html",
   cont_btn: "start",
   check_fn: check_preview,
-  force_refresh = true,
-  execute_script = true
+  force_refresh: true,
+  execute_script: true
 };
 timeline.push(ad);
 
