--- a/ad.html
+++ b/ad.html
@@ -1,22 +1,8 @@
 
 
 
-<div id="experiment_link">You must accept the HIT to begin the experiment.</div>
+<div id="experiment_link">
+  <p>You must accept the HIT to begin the experiment.</p>
+  <button type="button" id="start">Start Experiment</button>
+</div>
 
-<script>
-	// jsPsych has a method turkInfo() which can determine whether or not the
-	// HIT has been accepted.
-	//var turkInfo = jsPsych.turk.turkInfo();
-
-	// turkInfo.previewMode is true in two cases: when the HIT has not been
-	// accepted yet OR when the page is viewed outside of mechanical turk.
-	// The second property, outsideTurk, is true when the page is viewed
-	// outside of mechanical turk, so together, the statement will be true
-	// only when in Turk and when the HIT is not accepted yet.
-	if(!turkInfo.previewMode && !turkInfo.outsideTurk) {
-	  $('#experiment_link').html('<a href="mb3syllables.html" target="_self">Click Here to Start the Experiment</a>');
-	}
-</script>
-
-</body>
-</html>
