--- a/mb3syllables.html
+++ b/mb3syllables.html
@@ -14,6 +14,9 @@
   <script src="./plugins/mmturkey.js"></script>
   <script src="//uniqueturker.myleott.com/lib.js" type="text/javascript"></script>
 
+  <link href="./css/jspsych.css" rel="stylesheet" type="text/css"></link>
+</head>
+<body>
   <script type="text/javascript">
   (function(){
     var ut_id = "87faf8ccd545c22d81fca3bfff4f3aa4";
@@ -23,10 +26,8 @@
     }
   })();
   </script>
-
-  <link href="./css/jspsych.css" rel="stylesheet" type="text/css"></link>
-</head>
-<body></body>
+  
+</body>
 <script>
 //   Original jquery got on May 31, 2019 from "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
 var turkInfo = jsPsych.turk.turkInfo();
